fixed align issues

--- a/style.css
+++ b/style.css
@@ -258,6 +258,7 @@ about section start here  */
     color: var(--black);
     font-size: var(--medium);
     line-height: 32px;
+    margin: 0 auto;
 }
 
 #about .box-wrapper .box {
@@ -556,7 +557,7 @@ team section end here  */
     font-size: 50px;
     line-height: 70px;
     text-align: center;
-    margin: 0 64px;
+    margin: 0 48px;
 }
 
 
@@ -579,7 +580,7 @@ team section end here  */
     content: "";
     top: 0;
     left: 0;
-    width: 150px;
+    width: 180px;
     height: 100%;
     background: linear-gradient(to left, rgba(255, 255, 255, 0), #f1f1f1d4, #F1F1F1);
     z-index: 2;
@@ -590,7 +591,7 @@ team section end here  */
     content: "";
     top: 0;
     right: 0;
-    width: 150px;
+    width: 180px;
     height: 100%;
     background: linear-gradient(to right, rgba(255, 255, 255, 0), #f1f1f1d4, #F1F1F1);
     z-index: 2;
@@ -1161,8 +1162,14 @@ pricing section end here */
 #map img {
     width: 100%;
     margin-top: 48px;
+    cursor: pointer;
     filter: grayscale(75%);
     aspect-ratio: auto 6/9;
+}
+
+#map img:hover{
+    filter: grayscale(0);
+    filter: contrast(130%);
 }
 
 
